16503
```
Welcome to Scala version 2.10.0.r25912-b20111031020132 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_26).
Type in expressions to have them evaluated.
Type :help for more information.

scala> object A; import A._; case class A(c: Double)
<console>:7: error: illegal cyclic reference involving object A
       object A; import A._; case class A(c: Double)
                        ^

scala> object A; import A._; case class A()
defined module A
import A._
defined class A

scala> object A; import A._; case class A()(c: Double)
defined module A
import A._
defined class A
```

Doesn't happen in 2.9.1
